frb_example/pure_dart_multi/dart/lib/bridge_generated_api_block_2.io.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// Generated by `flutter_rust_bridge`@ 1.78.0.
// ignore_for_file: non_constant_identifier_names, unused_element, duplicate_ignore, directives_ordering, curly_braces_in_flow_control_structures, unnecessary_lambdas, slash_for_doc_comments, prefer_const_literals_to_create_immutables, implicit_dynamic_list_literal, duplicate_import, unused_import, unnecessary_import, prefer_single_quotes, prefer_const_constructors, use_super_parameters, always_use_package_imports, annotate_overrides, invalid_use_of_protected_member, constant_identifier_names, invalid_use_of_internal_member, prefer_is_empty, unnecessary_const

import "bridge_definitions.dart";
import 'dart:convert';
import 'dart:async';
import 'package:meta/meta.dart';
import 'package:flutter_rust_bridge/flutter_rust_bridge.dart';
import 'package:uuid/uuid.dart';
import 'bridge_generated_api_block_2.dart';
export 'bridge_generated_api_block_2.dart';
import 'bridge_generated_shares.io.dart';
import 'dart:ffi' as ffi;

class ApiBlock2ClassPlatform extends FlutterRustBridgeBase<ApiBlock2ClassWire> {
  final BridgeGeneratedSharesPlatform _sharedPlatform;
  ApiBlock2ClassPlatform(ffi.DynamicLibrary dylib)
      : _sharedPlatform = BridgeGeneratedSharesPlatform(dylib),
        super(ApiBlock2ClassWire(dylib));

// Section: api2wire

  @protected
  ffi.Pointer<wire_EnumDefinedInBlock2> api2wire_box_autoadd_enum_defined_in_block_2(EnumDefinedInBlock2 raw) {
    final ptr = inner.new_box_autoadd_enum_defined_in_block_2();
    _api_fill_to_wire_enum_defined_in_block_2(raw, ptr.ref);
    return ptr;
  }

  @protected
  ffi.Pointer<wire_StructDefinedInBlock2> api2wire_box_autoadd_struct_defined_in_block_2(StructDefinedInBlock2 raw) {
    final ptr = inner.new_box_autoadd_struct_defined_in_block_2();
    _api_fill_to_wire_struct_defined_in_block_2(raw, ptr.ref);
    return ptr;
  }

  @protected
  ffi.Pointer<wire_StructOnlyForBlock2> api2wire_box_autoadd_struct_only_for_block_2(StructOnlyForBlock2 raw) {
    final ptr = inner.new_box_autoadd_struct_only_for_block_2();
    _api_fill_to_wire_struct_only_for_block_2(raw, ptr.ref);
    return ptr;
  }

// Section: finalizer

// Section: api_fill_to_wire

  void _api_fill_to_wire_box_autoadd_enum_defined_in_block_2(
      EnumDefinedInBlock2 apiObj, ffi.Pointer<wire_EnumDefinedInBlock2> wireObj) {
    _api_fill_to_wire_enum_defined_in_block_2(apiObj, wireObj.ref);
  }

  void _api_fill_to_wire_box_autoadd_struct_defined_in_block_2(
      StructDefinedInBlock2 apiObj, ffi.Pointer<wire_StructDefinedInBlock2> wireObj) {
    _api_fill_to_wire_struct_defined_in_block_2(apiObj, wireObj.ref);
  }

  void _api_fill_to_wire_box_autoadd_struct_only_for_block_2(
      StructOnlyForBlock2 apiObj, ffi.Pointer<wire_StructOnlyForBlock2> wireObj) {
    _api_fill_to_wire_struct_only_for_block_2(apiObj, wireObj.ref);
  }

  void _api_fill_to_wire_enum_defined_in_block_2(EnumDefinedInBlock2 apiObj, wire_EnumDefinedInBlock2 wireObj) {
    if (apiObj is EnumDefinedInBlock2_Quit) {
      wireObj.tag = 0;
      return;
    }
    if (apiObj is EnumDefinedInBlock2_Move) {
      var pre_x = api2wire_i32(apiObj.x);
      var pre_y = api2wire_i32(apiObj.y);
      wireObj.tag = 1;
      wireObj.kind = inner.inflate_EnumDefinedInBlock2_Move();
      wireObj.kind.ref.Move.ref.x = pre_x;
      wireObj.kind.ref.Move.ref.y = pre_y;
      return;
    }
    if (apiObj is EnumDefinedInBlock2_Write) {
      var pre_field0 = _sharedPlatform.api2wire_String(apiObj.field0);
      wireObj.tag = 2;
      wireObj.kind = inner.inflate_EnumDefinedInBlock2_Write();
      wireObj.kind.ref.Write.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is EnumDefinedInBlock2_ChangeColor) {
      var pre_field0 = api2wire_i32(apiObj.field0);
      var pre_field1 = api2wire_i32(apiObj.field1);
      var pre_field2 = api2wire_i32(apiObj.field2);
      wireObj.tag = 3;
      wireObj.kind = inner.inflate_EnumDefinedInBlock2_ChangeColor();
      wireObj.kind.ref.ChangeColor.ref.field0 = pre_field0;
      wireObj.kind.ref.ChangeColor.ref.field1 = pre_field1;
      wireObj.kind.ref.ChangeColor.ref.field2 = pre_field2;
      return;
    }
  }

  void _api_fill_to_wire_struct_defined_in_block_2(StructDefinedInBlock2 apiObj, wire_StructDefinedInBlock2 wireObj) {
    wireObj.name = _sharedPlatform.api2wire_String(apiObj.name);
  }

  void _api_fill_to_wire_struct_only_for_block_2(StructOnlyForBlock2 apiObj, wire_StructOnlyForBlock2 wireObj) {
    wireObj.id = api2wire_i16(apiObj.id);
    wireObj.num = api2wire_f64(apiObj.num);
    wireObj.name = _sharedPlatform.api2wire_String(apiObj.name);
  }
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class ApiBlock2ClassWire implements FlutterRustBridgeWireBase {
  @internal
  late final dartApi = DartApiDl(init_frb_dart_api_dl);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ApiBlock2ClassWire(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ApiBlock2ClassWire.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
      : _lookup = lookup;

  void wire_test_method__method__CrossSharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_CrossSharedStructInBlock1And2> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__CrossSharedStructInBlock1And2(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__CrossSharedStructInBlock1And2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_CrossSharedStructInBlock1And2>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__CrossSharedStructInBlock1And2');
  late final _wire_test_method__method__CrossSharedStructInBlock1And2 =
      _wire_test_method__method__CrossSharedStructInBlock1And2Ptr.asFunction<
          void Function(int, ffi.Pointer<wire_CrossSharedStructInBlock1And2>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__CrossSharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__CrossSharedStructInBlock1And2(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__CrossSharedStructInBlock1And2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__CrossSharedStructInBlock1And2');
  late final _wire_test_static_method__static_method__CrossSharedStructInBlock1And2 =
      _wire_test_static_method__static_method__CrossSharedStructInBlock1And2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_enum_method__method__SharedComplexEnumInAllBlocks(
    int port_,
    ffi.Pointer<wire_SharedComplexEnumInAllBlocks> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_enum_method__method__SharedComplexEnumInAllBlocks(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_enum_method__method__SharedComplexEnumInAllBlocksPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedComplexEnumInAllBlocks>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_enum_method__method__SharedComplexEnumInAllBlocks');
  late final _wire_test_enum_method__method__SharedComplexEnumInAllBlocks =
      _wire_test_enum_method__method__SharedComplexEnumInAllBlocksPtr.asFunction<
          void Function(int, ffi.Pointer<wire_SharedComplexEnumInAllBlocks>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks(
      port_,
      message,
    );
  }

  late final _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks');
  late final _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks =
      _wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocksPtr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__SharedStructInAllBlocks(
    int port_,
    ffi.Pointer<wire_SharedStructInAllBlocks> that,
    ffi.Pointer<wire_uint_8_list> message,
    int num,
  ) {
    return _wire_test_method__method__SharedStructInAllBlocks(
      port_,
      that,
      message,
      num,
    );
  }

  late final _wire_test_method__method__SharedStructInAllBlocksPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>,
              ffi.Uint32)>>('wire_test_method__method__SharedStructInAllBlocks');
  late final _wire_test_method__method__SharedStructInAllBlocks = _wire_test_method__method__SharedStructInAllBlocksPtr
      .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_static_method__static_method__SharedStructInAllBlocks(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__SharedStructInAllBlocks(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__SharedStructInAllBlocksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__SharedStructInAllBlocks');
  late final _wire_test_static_method__static_method__SharedStructInAllBlocks =
      _wire_test_static_method__static_method__SharedStructInAllBlocksPtr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__SharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_SharedStructInBlock1And2> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__SharedStructInBlock1And2(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__SharedStructInBlock1And2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInBlock1And2>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__SharedStructInBlock1And2');
  late final _wire_test_method__method__SharedStructInBlock1And2 =
      _wire_test_method__method__SharedStructInBlock1And2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInBlock1And2>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__SharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__SharedStructInBlock1And2(
      port_,
      message,
    );
  }
